* Moved date var out of python script and into repo vars "script".
* Added two more values to be passed to the python script.
* Set the repo vars to production (non-testing) values.
* Minor code tweaks.
* Fixed some typos in unfinished code just to get the tests passing.
* Added support for getting the test name in Python 2.5.
* Updated the commit script so that tests can actually run.

2008.03.12

* Added scripts for creating a local mirror and syncing that mirror from
google.
* Removed extraneous slashes from scripts.
* Added more variables for use by other scripts (and changed some values for
testing purposes).
* Added more scripts for 1) uploading to SF.net, 2) automating the
form-processing, and 3) controlling the whole process.

2008.03.01

* Started getting the rest of the tests ready.

2008.02.29

* Added a print statement to the generate script.
* Moved Elements.TAB, .LINE and .RawCode into document.base.
* Moved Elements.Text and .Inline into document.character.
* Updated Renderer with these changes.
* Added a paragraph test.
* Moved character functions out of Elements and into document.character.
* Moved character test out of paragraphs tests.
* Added last paragraph test.
* First-run clean-up of the character tests.
* Added the charater tests.
* Made some initial changes to the table tests.

2008.02.28

* Added a stubbed script for the generation of test RTF docs.
* Created a place in test/sources for test RTF docs.
* Made changes to test_all so that it can be imported by other scripts.
* Made generalizations to test_all, reducing redundancy and increasing
usability/reusablity.
* Generated and checked the first reference RTF file.
* Had to move Paragraph class into new API to avoid circular imports.
* Renamed all *PS variables to *PropertySet and removed the short names.
* Added two more test reference RTF files.
* Updated section unit tests.
* Removed Paragraph from Elements.
* Added the next reference RTF file and finished up the last section test.